--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,12 @@
-image: python:3.7-alpine
+image: python:3.7-slim
 
 pages:
   stage: deploy
   script:
-  - apk update && apk --no-cache add build-base libzmq musl-dev python3 python3-dev zeromq-dev curl tar gzip  bash
+  - apt-get update && apt-get  install -y ca-certificates musl-dev  g++ python3 python3-dev  curl tar gzip bash wget
+  - pip install --upgrade pip
   - pip install pyzmq
-  - apk del build-base musl-dev python3-dev zeromq-dev
-  - pip install sphinx  nbsphinx numpydoc sphinx_automodapi pypandoc
+  - pip install sphinx  nbsphinx numpydoc sphinx_automodapi pypandoc sphinx-autopackagesummary pandas scipy
   - wget https://github.com/jgm/pandoc/releases/download/2.11.0.2/pandoc-2.11.0.2-linux-amd64.tar.gz 
   - tar -xvzf pandoc-2.11.0.2-linux-amd64.tar.gz --strip-components 1 -C /usr/local/
   - sphinx-build -b html docs public
